<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelefonoActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/dominos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dominos" />

        <RadioButton
            android:id="@+id/hut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hut" />

        <RadioButton
            android:id="@+id/benedettis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benedettis" />

        <RadioButton
            android:id="@+id/angelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/angelo" />

        <RadioButton
            android:id="@+id/pepperrones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pepperrones" />

        <RadioButton
            android:id="@+id/lucky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lucky" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>